# chrombpnet

./: .gitignore  CHANGELOG.md  CITATION.cff  ENCSR721XAP_fold_1_preds.sh  MANIFEST.in  README  README.md  Untitled.ipynb  afr_caqtls_enformer_gm.sh  afr_caqtls_enformer_gm_1.sh  afr_caqtls_enformer_gm_2.sh  afr_caqtls_enformer_gm_3.sh  all_afr_caqtls_enformer_gm_1.sh  all_afr_caqtls_enformer_gm_2.sh  all_afr_caqtls_enformer_gm_3.sh  all_afr_caqtls_enformer_gm_4.sh  atlas_gm_fold_0retrain.sh  atlas_imr90_fold_0retrain.sh  bqtls_enformer_gm.sh  ccres_cell_type_specfic.csv  chr1wide_make_bigwigs.sh  combine_bigwigs.sh  combine_deepshaps.py  dnase_chr1wide_make_bigwigs.sh  dnase_run_chrwide_make_bigwigs.py  docker_run  dockerfile  dsqtl_meta_data_small.tsv  dsqtls_enformer_gm.sh  dsqtls_enformer_gm_1.sh  dsqtls_new_dnas.sh  dsqtls_new_dnas_1.sh  dsqtls_new_dnas_ld.sh  dsqtls_new_dnas_ld_indiv.sh  eu_caqtls_enformer_gm.sh  eu_caqtls_enformer_gm_2.sh  experiment_log_README  get_bias_in_h5_format.py  gm12878_atac_bias_filters_100.sh  gm12878_atac_bias_filters_128.sh  (+132 more)
accuracy_footprint_compare/: K562_DNASE_vs_Vierstra_fold_0.ipynb  Plot_correlations.ipynb  get_idr_peak_intersections.vierstra.sh  helpers.py  vierstra_fp_vs_model_deepshap.ipynb  vierstra_fp_vs_model_deepshap_10K_IDR_SCORES_Correlations.ipynb
check_footprints/: checking_weights.ipynb  main_footprints_check-Copy1.ipynb  main_footprints_check.ipynb  testing.ipynb
chrombpnet/: CHROMBPNET.py  __init__.py  get_package_dir.py  (+4 more)
chrombpnet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+2892 files in other folders)
