[metadata]
name = chrompbnet
version = 0.0.1

[options]
package_dir =
    = src
zip_safe = False # Force package to be installed into filesystem
include_package_data = True
packages = find:
python_requires = >=3.7.9
install_requires = 
    h5py==2.10.0
    matplotlib==3.3.1
    matplotlib-venn==0.11.6
    numpy==1.19.5
    pandas==1.1.1 
    pyfaidx==0.6.1
    scikit-learn==0.23.2
    scipy==1.4.1
    tensorflow==2.4.1
    tensorflow-estimator==2.4.0
    tensorflow-probability==0.12.2 
    tqdm==4.48.2
    pyBigWig==0.3.18
    deepdish==0.3.7
    shap @ git+https://github.com/AvantiShri/shap@5fdad0651176cdbf1acd6c697604a71529695211
    deeplift==0.6.13.0
    modisco==0.5.15.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    chrompbnet=chrompbnet.cmdline:main # Entry point for `chrombpnet` command